book/tests/snapshots/snapshot__run_display_reference_prql@syntax-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/syntax-2.prql
---
prql dialect:generic

derive [
  x = 1,
  y = 2,
]
derive [
  a = `x`,
  b = `y`,
]
derive [
  c = `a`,
  d = `b`,
]


