book/tests/snapshots/snapshot__run_display_reference_prql@syntax-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/syntax-4.prql
---
prql dialect:generic

from `employees`
select `first_name`


