book/tests/snapshots/snapshot__run_display_reference_prql@syntax-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/syntax-6.prql
---
prql dialect: generic

from employeesaggregate [average salary]
