book/tests/snapshots/snapshot__run_display_reference_prql@syntax-8.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/syntax-8.prql
---
prql dialect:postgres



from employees
select `first name`



