book/tests/snapshots/snapshot__run_display_reference_prql@syntax-9.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/syntax-9.prql
---
prql dialect:bigquery

from `project-foo.dataset.table`
join `project-bar.dataset.table` [col_bax]


