book/tests/snapshots/snapshot__run_display_reference_prql@tables-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/tables-0.prql
---
prql dialect: generic

table top_50 = (
  from employees
  sort salary
  take 50
  aggregate ( sum salary )
)

from another_table
