book/tests/snapshots/snapshot__run_display_reference_prql@take-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/take-0.prql
---
from employees
take 10



