book/tests/snapshots/snapshot__run_display_reference_prql@take-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/take-1.prql
---
prql dialect:generic

from `orders`
sort [
  -`value`,
  `date`,
]
take 101..110


