book/tests/snapshots/snapshot__run_display_reference_prql@window-4.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/window-4.prql
---
from employees
filter salary < ( average salary )



